@@ -3,6 +3,7 @@
 # 1.4.0
     * Add support for WC Subscriptions plugin.
     * Added a script to remove the WCS Pay button on Thank-you page.
+    * On Thank-you page hooks check if the order belongs to Nuvei.
 
 # 1.3.1
     * Added the possibility to create empty Payment Plan. The merchant must leave the Payment Plan field empty.
